--- a/newswindow.ui
+++ b/newswindow.ui
@@ -41,7 +41,7 @@
   <widget class="QPushButton" name="SearchByWordButton">
    <property name="geometry">
     <rect>
-     <x>290</x>
+     <x>330</x>
      <y>85</y>
      <width>113</width>
      <height>31</height>
@@ -54,7 +54,7 @@
   <widget class="QLineEdit" name="wordInput">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>200</x>
      <y>90</y>
      <width>113</width>
      <height>20</height>
@@ -85,7 +85,7 @@
     <rect>
      <x>10</x>
      <y>170</y>
-     <width>121</width>
+     <width>161</width>
      <height>31</height>
     </rect>
    </property>
@@ -99,7 +99,7 @@
   <widget class="QPushButton" name="SearchByTopicButton">
    <property name="geometry">
     <rect>
-     <x>290</x>
+     <x>330</x>
      <y>170</y>
      <width>113</width>
      <height>30</height>
@@ -112,7 +112,7 @@
   <widget class="QComboBox" name="topic">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>190</x>
      <y>170</y>
      <width>131</width>
      <height>32</height>
@@ -159,7 +159,7 @@
     <rect>
      <x>10</x>
      <y>40</y>
-     <width>201</width>
+     <width>461</width>
      <height>40</height>
     </rect>
    </property>
@@ -175,7 +175,7 @@
     <rect>
      <x>10</x>
      <y>129</y>
-     <width>201</width>
+     <width>451</width>
      <height>31</height>
     </rect>
    </property>
@@ -191,7 +191,7 @@
     <rect>
      <x>10</x>
      <y>200</y>
-     <width>71</width>
+     <width>221</width>
      <height>31</height>
     </rect>
    </property>
@@ -207,7 +207,7 @@
     <rect>
      <x>350</x>
      <y>200</y>
-     <width>71</width>
+     <width>141</width>
      <height>31</height>
     </rect>
    </property>
@@ -221,9 +221,9 @@
   <widget class="QLabel" name="resultsTitle">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>480</x>
      <y>200</y>
-     <width>121</width>
+     <width>171</width>
      <height>31</height>
     </rect>
    </property>
@@ -231,7 +231,7 @@
     <string notr="true">font: 18pt &quot;.SF NS Text&quot;;border-bottom-width: 1px; border-bottom-style: solid; border-radius: 0px;font-weight: bold;</string>
    </property>
    <property name="text">
-    <string>News Source</string>
+    <string>Source</string>
    </property>
   </widget>
  </widget>
