--- a/stockwindow.ui
+++ b/stockwindow.ui
@@ -6,219 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1133</width>
-    <height>1351</height>
+    <width>845</width>
+    <height>761</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="3" column="0">
-    <widget class="QGroupBox" name="groupBox_3">
-     <property name="title">
-      <string/>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
-      <item>
-       <widget class="QGroupBox" name="sortStocks">
-        <property name="title">
-         <string>Sorted Stocks (Only searched stocks)</string>
-        </property>
-        <widget class="QLabel" name="sortedStocks">
-         <property name="geometry">
-          <rect>
-           <x>10</x>
-           <y>30</y>
-           <width>1081</width>
-           <height>151</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </widget>
-      </item>
-      <item>
-       <widget class="QGroupBox" name="compInfo">
-        <property name="title">
-         <string>Company Information</string>
-        </property>
-        <widget class="QGroupBox" name="groupBox">
-         <property name="geometry">
-          <rect>
-           <x>12</x>
-           <y>28</y>
-           <width>1081</width>
-           <height>155</height>
-          </rect>
-         </property>
-         <property name="title">
-          <string/>
-         </property>
-         <widget class="QLabel" name="label_8">
-          <property name="geometry">
-           <rect>
-            <x>12</x>
-            <y>12</y>
-            <width>99</width>
-            <height>16</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>Company Name: </string>
-          </property>
-         </widget>
-         <widget class="QLabel" name="label_10">
-          <property name="geometry">
-           <rect>
-            <x>12</x>
-            <y>35</y>
-            <width>124</width>
-            <height>16</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>Market Capitalization:</string>
-          </property>
-         </widget>
-         <widget class="QLabel" name="label_11">
-          <property name="geometry">
-           <rect>
-            <x>12</x>
-            <y>58</y>
-            <width>70</width>
-            <height>16</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>EBIT/Share:</string>
-          </property>
-         </widget>
-         <widget class="QLabel" name="label_12">
-          <property name="geometry">
-           <rect>
-            <x>12</x>
-            <y>81</y>
-            <width>81</width>
-            <height>16</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>Current Ratio:</string>
-          </property>
-         </widget>
-         <widget class="QLabel" name="label_13">
-          <property name="geometry">
-           <rect>
-            <x>12</x>
-            <y>104</y>
-            <width>76</width>
-            <height>16</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>Payout Ratio:</string>
-          </property>
-         </widget>
-         <widget class="QLabel" name="label_9">
-          <property name="geometry">
-           <rect>
-            <x>12</x>
-            <y>127</y>
-            <width>80</width>
-            <height>16</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>Gross Margin:</string>
-          </property>
-         </widget>
-         <widget class="QLabel" name="mCap">
-          <property name="geometry">
-           <rect>
-            <x>150</x>
-            <y>38</y>
-            <width>881</width>
-            <height>16</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string/>
-          </property>
-         </widget>
-         <widget class="QLabel" name="ebitShare">
-          <property name="geometry">
-           <rect>
-            <x>150</x>
-            <y>61</y>
-            <width>911</width>
-            <height>16</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string/>
-          </property>
-         </widget>
-         <widget class="QLabel" name="currentRatio">
-          <property name="geometry">
-           <rect>
-            <x>150</x>
-            <y>84</y>
-            <width>911</width>
-            <height>16</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string/>
-          </property>
-         </widget>
-         <widget class="QLabel" name="payoutRatio">
-          <property name="geometry">
-           <rect>
-            <x>150</x>
-            <y>107</y>
-            <width>911</width>
-            <height>16</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string/>
-          </property>
-         </widget>
-         <widget class="QLabel" name="grossMargin">
-          <property name="geometry">
-           <rect>
-            <x>150</x>
-            <y>130</y>
-            <width>921</width>
-            <height>16</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string/>
-          </property>
-         </widget>
-         <widget class="QLabel" name="compName">
-          <property name="geometry">
-           <rect>
-            <x>150</x>
-            <y>15</y>
-            <width>831</width>
-            <height>16</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string/>
-          </property>
-         </widget>
-        </widget>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
    <item row="1" column="0">
     <widget class="QGroupBox" name="groupBox_6">
      <property name="title">
@@ -243,36 +38,6 @@
          </item>
          <item>
           <widget class="QComboBox" name="stocksList"/>
-         </item>
-         <item>
-          <widget class="QGroupBox" name="viewOption">
-           <property name="title">
-            <string>View</string>
-           </property>
-           <layout class="QHBoxLayout" name="horizontalLayout_8">
-            <item>
-             <widget class="QRadioButton" name="stockView">
-              <property name="text">
-               <string>Stock Chart</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QRadioButton" name="listView">
-              <property name="text">
-               <string>Stocks List</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QRadioButton" name="companyView">
-              <property name="text">
-               <string>Company Information</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </widget>
          </item>
         </layout>
        </widget>
@@ -337,79 +102,95 @@
         <property name="title">
          <string>Stock Chart Options</string>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <layout class="QVBoxLayout" name="verticalLayout_4">
          <item>
-          <widget class="QGroupBox" name="groupBox_2">
+          <widget class="QGroupBox" name="groupBox_7">
            <property name="title">
-            <string>Chart Price Options</string>
+            <string/>
            </property>
-           <layout class="QHBoxLayout" name="horizontalLayout_7">
+           <layout class="QHBoxLayout" name="horizontalLayout_2">
             <item>
-             <widget class="QRadioButton" name="openButton">
-              <property name="text">
-               <string>Open</string>
+             <widget class="QGroupBox" name="groupBox_2">
+              <property name="title">
+               <string>Chart Price Options</string>
               </property>
+              <layout class="QHBoxLayout" name="horizontalLayout_7">
+               <item>
+                <widget class="QRadioButton" name="openButton">
+                 <property name="text">
+                  <string>Open</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QRadioButton" name="closeButton">
+                 <property name="text">
+                  <string>Close</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QRadioButton" name="highButton">
+                 <property name="text">
+                  <string>High</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QRadioButton" name="lowButton">
+                 <property name="text">
+                  <string>Low</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
              </widget>
             </item>
             <item>
-             <widget class="QRadioButton" name="closeButton">
-              <property name="text">
-               <string>Close</string>
+             <widget class="QGroupBox" name="groupBox_8">
+              <property name="title">
+               <string>Chart Timeline Options</string>
               </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QRadioButton" name="highButton">
-              <property name="text">
-               <string>High</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QRadioButton" name="lowButton">
-              <property name="text">
-               <string>Low</string>
-              </property>
+              <layout class="QHBoxLayout" name="horizontalLayout_6">
+               <item>
+                <widget class="QRadioButton" name="pastWeek">
+                 <property name="text">
+                  <string>Past Week</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QRadioButton" name="pastMonth">
+                 <property name="text">
+                  <string>Past Month</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QRadioButton" name="pastMonth2">
+                 <property name="text">
+                  <string>Past 2 Months</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QRadioButton" name="pastMonth3">
+                 <property name="text">
+                  <string>Past 3 Months</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
              </widget>
             </item>
            </layout>
           </widget>
          </item>
          <item>
-          <widget class="QGroupBox" name="groupBox_8">
-           <property name="title">
-            <string>Chart Timeline Options</string>
+          <widget class="QPushButton" name="viewChart">
+           <property name="text">
+            <string>View Stock Chart</string>
            </property>
-           <layout class="QHBoxLayout" name="horizontalLayout_6">
-            <item>
-             <widget class="QRadioButton" name="pastWeek">
-              <property name="text">
-               <string>Past Week</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QRadioButton" name="pastMonth">
-              <property name="text">
-               <string>Past Month</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QRadioButton" name="pastMonth2">
-              <property name="text">
-               <string>Past 2 Months</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QRadioButton" name="pastMonth3">
-              <property name="text">
-               <string>Past 3 Months</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
           </widget>
          </item>
         </layout>
@@ -419,17 +200,23 @@
     </widget>
    </item>
    <item row="2" column="0">
-    <widget class="QGroupBox" name="chartFrameBox">
+    <widget class="QGroupBox" name="sortStocks">
      <property name="title">
-      <string>Stock Chart</string>
+      <string>Sorted Stocks (Only searched stocks)</string>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_10">
-      <item>
-       <widget class="QFrame" name="chartFrame">
-        <layout class="QHBoxLayout" name="horizontalLayout"/>
-       </widget>
-      </item>
-     </layout>
+     <widget class="QLabel" name="sortedStocks">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>30</y>
+        <width>1081</width>
+        <height>151</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
     </widget>
    </item>
    <item row="0" column="0">
@@ -437,6 +224,169 @@
      <property name="text">
       <string>Back</string>
      </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string>Company Information</string>
+     </property>
+     <widget class="QLabel" name="label_8">
+      <property name="geometry">
+       <rect>
+        <x>12</x>
+        <y>27</y>
+        <width>99</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Company Name: </string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_10">
+      <property name="geometry">
+       <rect>
+        <x>12</x>
+        <y>50</y>
+        <width>124</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Market Capitalization:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_11">
+      <property name="geometry">
+       <rect>
+        <x>12</x>
+        <y>73</y>
+        <width>70</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>EBIT/Share:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_12">
+      <property name="geometry">
+       <rect>
+        <x>12</x>
+        <y>96</y>
+        <width>81</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Current Ratio:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_13">
+      <property name="geometry">
+       <rect>
+        <x>12</x>
+        <y>119</y>
+        <width>76</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Payout Ratio:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>12</x>
+        <y>142</y>
+        <width>80</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Gross Margin:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="mCap">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>53</y>
+        <width>881</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="ebitShare">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>76</y>
+        <width>911</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="currentRatio">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>99</y>
+        <width>911</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="payoutRatio">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>122</y>
+        <width>911</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="grossMargin">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>145</y>
+        <width>921</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="compName">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>30</y>
+        <width>831</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
     </widget>
    </item>
   </layout>
