--- a/stockwindow.ui
+++ b/stockwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>845</width>
-    <height>761</height>
+    <height>900</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -59,6 +59,9 @@
               <property name="text">
                <string>Market Capitalization</string>
               </property>
+              <property name="checked">
+               <bool>true</bool>
+              </property>
              </widget>
             </item>
             <item>
@@ -81,6 +84,9 @@
              <widget class="QRadioButton" name="ascdButton">
               <property name="text">
                <string>Ascending</string>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
@@ -120,6 +126,9 @@
                  <property name="text">
                   <string>Open</string>
                  </property>
+                 <property name="checked">
+                  <bool>true</bool>
+                 </property>
                 </widget>
                </item>
                <item>
@@ -156,6 +165,9 @@
                 <widget class="QRadioButton" name="pastWeek">
                  <property name="text">
                   <string>Past Week</string>
+                 </property>
+                 <property name="checked">
+                  <bool>true</bool>
                  </property>
                 </widget>
                </item>
@@ -201,6 +213,12 @@
    </item>
    <item row="2" column="0">
     <widget class="QGroupBox" name="sortStocks">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>75</height>
+      </size>
+     </property>
      <property name="title">
       <string>Sorted Stocks (Only searched stocks)</string>
      </property>
@@ -210,7 +228,7 @@
         <x>10</x>
         <y>30</y>
         <width>1081</width>
-        <height>151</height>
+        <height>31</height>
        </rect>
       </property>
       <property name="text">
